# e2

./: .gitignore  CMakeLists.txt  README.md  notes.txt
include/: class.h  cmdline.h  defs.h
include/engine/: Object.h  component.h  entity.h  staticrefl.h
include/system/: cmdline.h  fstdc.h  platform.h  wndeventlistener.h
src/: CMakeLists.txt  includes.cmake
src/engine/: component.cpp
src/main/: CMakeLists.txt  main.cpp
src/system/: CMakeLists.txt  cmdline.cpp  fstdc.cpp  null_platform.cpp  platform.cpp  windows_platform.cpp  x11_platform.cpp
